--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -4,10 +4,9 @@
       <a class="navbar-brand" href="#">PopcornTime</a>
     </div>
     <ul class="nav navbar-nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Posts</a></li>
-      <li><a href="#">Comments</a></li>
-      <li><a href="#">Movies</a></li>
+      <li><a href="posts">Posts</a></li>
+      <li><a href="comments">Comments</a></li>
+      <li><a href="#">Contact</a></li>
     </ul>
   </div>
 </nav>
