--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,8 @@
 
   <div class="container">
     <body>
-     <%= yield %>
+    <p class="alert"><%= alert %></p>
+    <%= yield %>
     </body>
   </div>
 </html>
