--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,4 +1,4 @@
-<h1>Welcome to PopcornTime!</h1>
-<p>This is our homepage to our new movies fourm website.<p>
-<p>PopcornTime is a website where people can come and talk to other people about movies they have seen recently.<p>
+<h1>Welcome to PretzelTime!</h1>
+<p>This is our homepage to our new movies forum website.<p>
+<p>PretzelTime is a website where people can come and talk to other people about movies they have seen recently.<p>
 <p>Find me in app/views/welcome/homepage.html.erb</p>
