--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,20 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">PopcornTime</a>
+      <a class="navbar-brand" href="/">PretzelTime</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="posts">Posts</a></li>
-      <li><a href="comments">Comments</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="/posts">Posts</a></li>
+      <li><a href="/comments">Comments</a></li>
     </ul>
+    <ul class="nav navbar-nav navbar-right">
+      <% if !user_signed_in? %>
+        <li><a href="/users/sign_up"><span class="glyphicon glyphicon-user"></span> Sign up</a></li>
+        <li><a href="/users/sign_in"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+      <% end %>
+      <% if user_signed_in? %>
+        <li><a href=""><span class="glyphicon glyphicon-user"></span><%= current_user.email %></a></li>
+        <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></a></li>
+      <% end %>
   </div>
 </nav>
