--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,28 +2,14 @@
 
 <h1>Posts</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Content</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<% @posts.each do |post| %>
+  <div class="post_wrapper">
+    <h4 class = "title"><%= link_to post.title, post %></h4>
+  </div>
+<% end %>
 
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.title %></td>
-        <td><%= post.content %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
+<% if user_signed_in? %>
+  <div class = "buttons">
+    <button class = "button"><%= link_to 'New Post', new_post_path %></button>
+  </div>
+<% end %>
