--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -10,5 +10,12 @@
   <%= @post.content %>
 </p>
 
-<%= link_to 'Edit', edit_post_path(@post) %> |
+<p class = "date">
+  Posted <%= time_ago_in_words(@post.created_at) %> ago
+  <% if user_signed_in? %>
+		| <%= link_to 'Edit', edit_post_path(@post) %> |
+		  <%= link_to 'Delete', post_path(@post), method: :delete, data: { confirm: 'Are you sure?' } %>
+	  <% end %>
+</p>
+
 <%= link_to 'Back', posts_path %>
