--- a/app/views/welcome/homepage.html.erb
+++ b/app/views/welcome/homepage.html.erb
@@ -1,4 +1,14 @@
 <h1>Welcome to PretzelTime!</h1>
-<p>This is our homepage to our new movies forum website.<p>
-<p>PretzelTime is a website where people can come and talk to other people about movies they have seen recently.<p>
-<p>Find me in app/views/welcome/homepage.html.erb</p>
+<p>PretzelTime is a simple website where people can come and talk to other people about movies they have seen recently.<p>
+<h3>How does PretzelTime work?</h3>
+<p>Anyone, with an account, can create or comment on a post. The user that creates the post or comment will have full
+ control over editing or deleting. PretzelTime is meant to be simple and easy to use. Users will be able to create an account in seconds and post
+ right after account creation.</p>
+<h3>What makes us different?</h3>
+<p>PretzelTime was made with the intent to have the users in mind. No critics, no professional reviews. Every post, opinion, and comment is a
+ person's individual opinion.</p>
+ <p>Anyone can view the posts and their comments, but in order to partake in a conversation the person will have to create an account. This space
+ is meant to be a free, respectful, and open place where people should be free to express their opinions at their will. However, there is a limit to
+ how many comments one user can comment. Users have the choice to be anonymous or to show their name publically.</p>
+ <h3>Contact Us</h3>
+ <p>If you have any problems or questions, feel free to contact us at pretzeltime@gmail.com!</p>
